examples/bounded-types/compile_fail/negative_bounds_uint.stderr
error: proc macro panicked
  --> compile_fail/negative_bounds_uint.rs:6:13
   |
 6 |       let _ = m!(
   |  _____________^
 7 | |         struct Temp {
 8 | |             reading: uint[-10, -1]
...  |
11 | |     )
   | |_____^
   |
   = help: message: marigold parsing error: MarigoldParseError("Bounded type validation failed:\n  - Bounds violation for field 'Temp.reading': uint[] cannot have negative min value (-10)")

error[E0282]: type annotations needed
  --> compile_fail/negative_bounds_uint.rs:6:13
   |
 6 |       let _ = m!(
   |  _____________^
 7 | |         struct Temp {
 8 | |             reading: uint[-10, -1]
...  |
12 | |     .await
   | |__________^ cannot infer type
